--- a/WWW/WWW/WWW/WWW.csproj
+++ b/WWW/WWW/WWW/WWW.csproj
@@ -121,6 +121,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Views\Home\Register.cshtml" />
+    <Content Include="Views\Home\Panel.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
